--- a/trunk/server/damagecontrol/template/short_text_build_result.erb
+++ b/trunk/server/damagecontrol/template/short_text_build_result.erb
@@ -1,1 +1,1 @@
-[<%=build.project_name%>] BUILD <%=build.status%>
+[<%=build.project_name%>] BUILD <%=build.status%>: <%=dc_url%>public/project?project_name=<%=build.project_name%>
