--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -6,11 +6,13 @@
 <body onLoad="distributeCvsrootFields()">
 <script><!--
 
+initialScm = "<%=project_config['scm_type']%>"
 oldScmDiv = null
 function showScm(scm) {
-	if(oldScmDiv) {
-		oldScmDiv.style.display = 'none'
+	if(!oldScmDiv) {
+		oldScmDiv = document.getElementById(initialScm)
 	}
+	oldScmDiv.style.display = 'none'
 	newScmDiv = document.getElementById(scm)
 	newScmDiv.style.display = 'block'
 	oldScmDiv = newScmDiv
