small fix to make it work for new project too

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -12,7 +12,9 @@ function showScm(scm) {
 	if(!oldScmDiv) {
 		oldScmDiv = document.getElementById(initialScm)
 	}
-	oldScmDiv.style.display = 'none'
+	if(oldScmDiv) {
+		oldScmDiv.style.display = 'none'
+	}
 	newScmDiv = document.getElementById(scm)
 	newScmDiv.style.display = 'block'
 	oldScmDiv = newScmDiv
