fixed mail subject/content

--- a/trunk/server/damagecontrol/template/short_html_build_result.erb
+++ b/trunk/server/damagecontrol/template/short_html_build_result.erb
@@ -1,1 +1,1 @@
-<a href="<%=dc_url%>public/project?project_name=<%=build.project_name%>">[<%=build.project_name%>] BUILD <%=build.status%></a>
+<a href="<%=dc_url%>public/project?action=build_details&project_name=<%=build.project_name%>&timestamp=<%=build.timestamp%>">[<%=build.project_name%>] BUILD <%=build.status%></a>
