tried to improve layout of dashboard (unsuccesfully) menu to the left instead of the right better building of installer (no CVS directories) better logging of cvs log made dctray a bit more robust

--- a/trunk/server/damagecontrol/web/css/style.css
+++ b/trunk/server/damagecontrol/web/css/style.css
@@ -19,6 +19,10 @@ img {
   border: 0;
 }
 
+div.dashboard {
+  display: inline;
+}
+
 .scm_info {
   width: 480px;
 }
@@ -51,7 +55,7 @@ img {
 }
 
 .task-panel {
-  float: right;
+  float: left;
   width: 200px;
   margin-right: -1px;
   padding: 3px;
@@ -61,8 +65,8 @@ img {
 }
 
 .main-panel {
-  float: left;
-  clear: left;
+  float: right;
+  clear: right;
 }
 
 .task-header {
