added tooltips for builds in web admin: http://jira.codehaus.org/browse/DC-120

--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -70,7 +70,7 @@ build = build_history_repository.lookup(project_name, request.query["timestamp"]
     <% if(build.changesets.length == 0)then %>
       <tr>
         <td colspan="4">
-          No changes in this build
+          <%= no_changes_in_this_build %>
         </td>
       </tr>
     <% else %>
