--- a/trunk/server/damagecontrol/web/css/style.css
+++ b/trunk/server/damagecontrol/web/css/style.css
@@ -5,13 +5,38 @@ body, table, form, input, td, th, p, textarea, select
 }
 
 a:link {
-  color: #0000ff;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #ff0000;
   text-decoration: underline;
+}
+
+/* tip - anchors of class info */
+a.tip {
+  position:relative;
+  z-index:24;
+  text-decoration: underline;
+}
+
+a.tip:hover {
+  z-index:25;
+}
+
+a.tip span {
+  display: none
+}
+
+a.tip:hover span {
+  display:block;
+  position:absolute;
+  top:2em; 
+  left:2em; 
+  width:400px;
+  border:1px solid #bbbbbb;
+  background-color:#fffff0; 
+  color:#000;
+  text-align: left
 }
 
 img {
