--- a/trunk/server/damagecontrol/web/css/style.css
+++ b/trunk/server/damagecontrol/web/css/style.css
@@ -39,6 +39,58 @@ a.tip:hover span {
   text-align: left
 }
 
+#top-panel {
+  padding-bottom: 3pt;
+  margin-bottom: 3pt;
+}
+
+#top-nav {
+  height: 16px;
+  border-top: 1px #7f7f7f solid;
+  border-bottom: 1px #7f7f7f solid;
+  padding-bottom: 3pt;
+  margin-bottom: 3pt;
+}
+
+#left-top-nav {
+  float: left;
+}
+
+#right-top-nav {
+  float: right;
+}
+
+#side-panel {
+  float:left;
+  width:26%;
+  background:#fff;
+  margin-right:15px;
+  padding-bottom:20px;
+  margin-right: -1px;
+  padding: 3px;
+  border: 1px #7f7f7f solid;
+  border-bottom: 2px #7f7f7f solid;
+  border-right: 2px #7f7f7f solid;
+}
+
+#main-panel {
+  float: right;
+  width: 68%;
+}
+
+#footer {
+  text-align: center;
+  font-size: 8pt;
+  margin-top: 10em;
+  width: 100%
+  padding: 10px;
+  float: right;
+  /*
+  position: absolute;
+  bottom: 0;
+  */
+}
+
 img {
   vertical-align: middle;
   border: 0;
@@ -56,44 +108,6 @@ div.dashboard {
   width: 160px;
 }
 
-.top-panel {
-  float: top;
-  padding-bottom: 3pt;
-  margin-bottom: 3pt;
-}
-
-.top-nav {
-  float: top;
-  height: 16px;
-  border-top: 1px #7f7f7f solid;
-  border-bottom: 1px #7f7f7f solid;
-  padding-bottom: 3pt;
-  margin-bottom: 3pt;
-}
-
-.left-top-nav {
-  float: left;
-}
-
-.right-top-nav {
-  float: right;
-}
-
-.task-panel {
-  float: left;
-  width: 200px;
-  margin-right: -1px;
-  padding: 3px;
-  border: 1px #7f7f7f solid;
-  border-bottom: 2px #7f7f7f solid;
-  border-right: 2px #7f7f7f solid;
-}
-
-.main-panel {
-  float: right;
-  clear: right;
-}
-
 .task-header {
   display: block;
   border-bottom: 1px #7f7f7f solid;
@@ -101,21 +115,11 @@ div.dashboard {
   font-size: 12pt;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  padding: 10px;
-  float: bottom;
-  font-size: 8pt;
-  text-align: center;
-  margin-top: 5em
-}
-
 .main-table {
 }
 
 .pane  {
-  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 table.pane {
