rewrote svn log parser (you musta been tired when you wrote that code, Aslak!) refactored scm web configuration so it's completely pluggable (it's niiiiiice!)

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -1,139 +1,34 @@
 <html>
 <head>
-<title>Example Design</title>
+<title><%= project_name %> Configuration</title>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
-<body onLoad="distributeCvsrootFields()">
+<body onLoad="executeOnLoad()">
 <script><!--
 
-initialScm = "<%=project_config['scm_type']%>"
+function executeOnLoad() {  
+  <% scm_configurators.each do |scm_configurator| %>
+    <%= scm_configurator.javascript_on_load %>
+  <% end %>
+}
+
+initialScm = "<%= project_config['scm_type'] %>"
 oldScmDiv = null
 function showScm(scm) {
-	if(!oldScmDiv) {
-		oldScmDiv = document.getElementById(initialScm)
-	}
-	if(oldScmDiv) {
-		oldScmDiv.style.display = 'none'
-	}
-	newScmDiv = document.getElementById(scm)
-	newScmDiv.style.display = 'block'
-	oldScmDiv = newScmDiv
+  if(!oldScmDiv) {
+    oldScmDiv = document.getElementById(initialScm)
+  }
+  if(oldScmDiv) {
+    oldScmDiv.style.display = 'none'
+  }
+  newScmDiv = document.getElementById(scm)
+  newScmDiv.style.display = 'block'
+  oldScmDiv = newScmDiv
 }
 
-////////// CVS functions //////////
-
-cvs_port   = new RegExp("^:(.*):(.*)@(.*):([0-9]*):([a-zA-Z]?.*)")
-cvs_noport = new RegExp("^:(.*):(.*)@(.*):([a-zA-Z]?.*)")
-cvs_local  = new RegExp("^:(local):(.*)")
-
-function distributeCvsrootFields() {
-	cvsroot = document.getElementById('cvsroot').value
-
-	protocolIndex = 1
-	userIndex     = -1
-	serverIndex   = -1
-	portIndex     = -1
-	pathIndex     = -1
-	if(tokens = cvs_port.exec(cvsroot)) {
-		userIndex = 2
-		serverIndex = 3
-		portIndex = 4
-		pathIndex = 5
-	} else if(tokens = cvs_noport.exec(cvsroot)) {
-		userIndex = 2
-		serverIndex = 3
-		pathIndex = 4
-	} else if(tokens = cvs_local.exec(cvsroot)) {
-		pathIndex = 2
-	}
-	if(pathIndex != -1) {
-		document.getElementById('cvsprotocol').selectedIndex = findIndex(tokens[protocolIndex])
-
-		if(userIndex != -1) {
-			document.getElementById('cvsuser').value = tokens[userIndex]
-			document.getElementById('cvsserver').value = tokens[serverIndex]
-		} else {
-			document.getElementById('cvsuser').value = ""
-			document.getElementById('cvsserver').value = ""
-		}
-
-		if(portIndex != -1) {
-			document.getElementById('cvsport').value = tokens[portIndex]
-		} else {
-			document.getElementById('cvsport').value = ""
-		}
-
-		document.getElementById('cvsrepodir').value = tokens[pathIndex]
-	} else {
-		// didn't match
-		clearCvsFields()
-		// TODO: make CVSROOT yellow and blank all the others. Also disable submit.
-	}
-	enableOrDisableCvsFieldsAndUpdateScmSpec()
-}
-
-function clearCvsFields() {
-	document.getElementById('cvsprotocol').selectedIndex = 0
-	document.getElementById('cvsuser').value = ""
-	document.getElementById('cvsserver').value = ""
-	document.getElementById('cvsport').value = ""
-	document.getElementById('cvsrepodir').value = ""
-}
-
-function findIndex(protocol) {
-	arr = new Array("ext", "pserver", "local")
-	for (var i=0; i < arr.length; i++) {
-		if(arr[i] == protocol) {
-			return i + 1
-		}
-	}
-	return 0
-}
-
-function updateCvsRootField() {
-	userAtServerAtPort = ""
-	if(document.getElementById('cvsprotocol').value != "local") {
-		// it's proper client/server
-		port = document.getElementById('cvsport').value != "" ? document.getElementById('cvsport').value + ":" : ""
-		userAtServerAtPort =
-			document.getElementById('cvsuser').value + "@" +
-			document.getElementById('cvsserver').value + ":" +
-			port
-	}
-	document.getElementById('cvsroot').value = ":" +
-		document.getElementById('cvsprotocol').value + ":" +
-		userAtServerAtPort +
-		document.getElementById('cvsrepodir').value
-	enableOrDisableCvsFieldsAndUpdateScmSpec()
-}
-
-function enableOrDisableCvsFieldsAndUpdateScmSpec() {
-	if(document.getElementById('cvsprotocol').value == "local") {
-		document.getElementById('cvsuser').disabled = true
-		document.getElementById('cvspassword').disabled = true
-		document.getElementById('cvsserver').disabled = true
-		document.getElementById('cvsport').disabled = true
-	} else if(document.getElementById('cvsprotocol').value == "ext") {
-		document.getElementById('cvsuser').disabled = false
-		document.getElementById('cvspassword').disabled = true
-		document.getElementById('cvsserver').disabled = false
-		document.getElementById('cvsport').disabled = false
-	} else if(document.getElementById('cvsprotocol').value == "pserver") {
-		document.getElementById('cvsuser').disabled = false
-		document.getElementById('cvspassword').disabled = false
-		document.getElementById('cvsserver').disabled = false
-		document.getElementById('cvsport').disabled = false
-	}
-	// disable unix_groups if the path is a windows path
-	windows_path = new RegExp("^[a-zA-Z].*")
-	if(windows_path.exec(document.getElementById('cvsrepodir').value))  {
-//		document.getElementById('unix_groups').disabled = true
-	} else {
-//		document.getElementById('unix_groups').disabled = false
-	}
-}
-
-////////// Subversion functions //////////
+<% scm_configurators.each do |scm_configurator| %>
+  <%= scm_configurator.javascript_declarations %>
+<% end %>
 
 // --></script>
 
@@ -169,74 +64,21 @@ function enableOrDisableCvsFieldsAndUpdateScmSpec() {
 <tr>
   <td>Source control</td>
   <td>
-    <input id="cvsradio" type="radio" value="cvs" name="scm_type" onClick="javascript:showScm('cvs')"<% if(project_config['scm_type']=="cvs") %> checked="true"<%end%>/> CVS
-    <input id="svnradio" type="radio" value="svn" name="scm_type" onClick="javascript:showScm('svn')"<% if(project_config['scm_type']=="svn") %> checked="true"<%end%>/> Subversion 
+    <% scm_configurators.each do |scm_configurator| %>
+      <input id="<%= scm_configurator.scm_id %>radio" type="radio" value="<%= scm_configurator.scm_id %>" name="scm_type" onClick="javascript:showScm('<%= scm_configurator.scm_id %>')"<%if(scm_configurator.selected?)%>checked="true"<%end%>/> <%= scm_configurator.scm_display_name %>
+    <% end %>
   </td>
 </tr>
 </table>
 
-<div id="cvs" style="<% if(project_config['scm_type']=='cvs')%>display:block<%else%>display:none<%end%>">
-<img src="http://www.wincvs.org/cvs.png"/>
-	<table>
-		<tr>
-			<td class="config_cell">CVSROOT</td>
-			<td><input class="scm_info" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value="<%= project_config['cvsroot'] %>"></td>
-		</tr>
-		<tr>
-			<td>Protocol</td>
-			<td>
-				<select class="scm_info" id="cvsprotocol" onchange="updateCvsRootField()">
-					<option value=""></option>
-					<option value="ext" selected>Secure shell (:ext:)</option>
-					<option value="pserver">Password server (:pserver:)</option>
-					<option value="local">Locally mounted folder (:local:)</option>
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>User name</td>
-			<td><input class="scm_info" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
-		</tr>
-		<tr>
-			<td>Password</td>
-			<td><input class="scm_info" name="cvspassword" id="cvspassword" onKeyUp="updateCvsRootField()" type="text"></td>
-		</tr>
-		<tr>
-			<td>Server</td>
-			<td><input class="scm_info" id="cvsserver" onKeyUp="updateCvsRootField()" type="text"></td>
-		</tr>
-		<tr>
-			<td>Port</td>
-			<td><input class="scm_info" id="cvsport" onKeyUp="updateCvsRootField()" type="text"></td>
-		</tr>
-		<tr>
-			<td>Repository directory</td>
-			<td><input class="scm_info" id="cvsrepodir" onKeyUp="updateCvsRootField()" type="text"></td>
-		</tr>
-		<tr>
-			<td>Module</td>
-			<td><input class="scm_info" name="cvsmodule" id="cvsmodule" onKeyUp="updateCvsRootField()" type="text" value="<%= project_config['cvsmodule'] %>"></td>
-		</tr>
-		<tr>
-			<td>ViewCVS base URL</td>
-			<td><input class="scm_info" name="view_cvs_url" id="view_cvs_url" type="text" value="<%= project_config['view_cvs_url'] %>"></td>
-		</tr>
-	</table>
+  <% scm_configurators.each do |scm_configurator| %>
+    <div id="<%= scm_configurator.scm_id %>" style="<% if(scm_configurator.selected?)%>display:block<%else%>display:none<%end%>">
+      <%= scm_configurator.config_form %>
+    </div>
+  <% end %>
 
-</div>
-
-<div id="svn" style="<% if(project_config['scm_type']=='svn')%>display:block<%else%>display:none<%end%>">
-<img src="http://subversion.tigris.org/subversion_logo-200x173.png" height="62" width="54"/> (doesn't work yet)
-	<table>
-		<tr>
-			<td class="config_cell">URL</td>
-			<td><input class="scm_info" name="svnurl" id="svnurl" type="text" value="<%= project_config['svnurl'] %>"></td>
-		</tr>
-	</table>
-</div>
   <input name="action" type="hidden" value="<%= action %>" />
   <input type="submit" value="Save"/>
-</form>
-
+  
 </body>
 </html>
