--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -1,8 +1,12 @@
 <img src="http://subversion.tigris.org/subversion_logo-200x173.png" height="62" width="54"/> (doesn't work yet)
 	<table>
 		<tr>
-			<td class="config_cell">URL</td>
+			<td class="config_cell">Base url</td>
 			<td><input class="scm_info" name="svnurl" id="svnurl" type="text" value="<%= project_config['svnurl'] %>"></td>
+		</tr>
+		<tr>
+			<td class="config_cell">Directory</td>
+			<td><input class="scm_info" name="svnprefix" id="svnprefix" type="text" value="<%= project_config['svnprefix'] %>"></td>
 		</tr>
 	</table>
 </div>
