--- a/trunk/server/damagecontrol/web/components/search_form.erb
+++ b/trunk/server/damagecontrol/web/components/search_form.erb
@@ -1,7 +1,8 @@
 <form action="project">
   Search <%= project_name %> builds:<br>
-  <input name="search" value="<%= request.query['search'] %>"/>
-  <input name="action" value="search" type="hidden"/>
-  <input name="project_name" value="<%= project_name %>" type="hidden"/>
+  <image src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/>
+
+  <input name="project_name" value="<%= project_name %>" type="hidden"/>
+  <input name="action" value="search" type="hidden"/>
 </form>
