--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -8,5 +8,9 @@
 			<td class="config_cell">Directory</td>
 			<td><input class="scm_info" name="svnprefix" id="svnprefix" type="text" value="<%= project_config['svnprefix'] %>"></td>
 		</tr>
+		<tr>
+			<td>ViewCVS/Fisheye base URL</td>
+			<td><input class="scm_info" name="view_cvs_url" id="view_cvs_url" type="text" value="<%= project_config['view_cvs_url'] %>"></td>
+		</tr>
 	</table>
 </div>
