Added more images and fixed a bad method ref

--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -43,7 +43,7 @@
   %>
   <table class="pane">
     <tr><td class="pane">
-    <a href="<%= log_url %>">Console output</a>
+    <a href="<%= log_url %>"><image src="icons/console_network.png"/></a> <a href="<%= log_url %>">Console output</a>
     </td></tr>
   </table>
 
