--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -26,17 +26,7 @@
   next_link = "No next build &nbsp;&gt;&gt;"
   next_link = "<a href=\"#{build_url(next_build)}\">#{build_description(next_build)}</a>&nbsp;&gt;&gt;" if next_build
   %>
-  <table class="pane">
-    <tr>
-      <td class="pane" align="left">
-        <%=prev_link%>
-      </td>
-      <td class="pane" align="right">
-        <%=next_link%>
-      </td>
-    </tr>
-  </table>
-  
+
   <%
   # =============== console output link pane
   log_url = "log?project_name=#{project_name}&timestamp=#{selected_build.timestamp}"
@@ -58,7 +48,7 @@
   <% if selected_build then %>
 
   <table class="pane">
-    <tr><td class="pane-header" colspan="4">
+    <tr><td class="pane-header" colspan="3">
       <% if(previous_successful_build) %>
         Changes since #{previous_successful_build_link}
       <% else %>
@@ -67,7 +57,7 @@
     </td></tr>
     <% if(selected_build.changesets.length == 0)then %>
       <tr>
-        <td colspan="4">
+        <td colspan="3">
           <%= no_changes_in_this_build %>
         </td>
       </tr>
@@ -77,12 +67,14 @@
       %>
 
         <tr class="pane">
-          <td colspan="2" class="changeset"><%= changeset.developer %> : <%= changeset.message %></td>
+          <td colspan="3" class="changeset"><%= changeset.developer %> : <%= changeset.message %></td>
         </tr>
         <%
         changeset.each do |change|
         %>
         <tr>
+          <td><image src="<%= file_icon(change) %>"/></td>
+          <td><%= change.revision %></td>
           <td>
             <% if scm_url(project_name, change) then %>
               <a href="<%= scm_url(project_name, change) %>"><%= change.path %></a>
@@ -90,7 +82,6 @@
               <%= change.path %>
             <% end %>
           </td>
-          <td><%= change.revision %></td>
         </tr>
         <% end %>
 
