--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -31,8 +31,8 @@
   # =============== console output link pane
   log_url = "log?project_name=#{project_name}&timestamp=#{selected_build.timestamp}"
   %>
-  <table class="pane">
-    <tr><td class="pane">
+  <table class="console-output">
+    <tr><td class="console-output">
     <a href="<%= log_url %>"><image src="icons/console_network.png"/></a> <a href="<%= log_url %>">Console output</a>
     </td></tr>
   </table>
