--- a/trunk/server/damagecontrol/web/components/global_search_form.erb
+++ b/trunk/server/damagecontrol/web/components/global_search_form.erb
@@ -1,6 +1,7 @@
 <form action="project">
   Search builds:<br>
-  <input name="search" value="<%= request.query['search'] %>"/>
-  <input name="action" value="search" type="hidden"/>
+  <image src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/>
+
+  <input name="action" value="search" type="hidden"/>
 </form>
