don't inspect - to avoid nil when doing new project

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -2,7 +2,7 @@
 <table>
   <tr>
     <td class="config_cell">CVSROOT</td>
-    <td><input class="scm_info" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value=<%= project_config['cvsroot'].inspect %>></td>
+    <td><input class="scm_info" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value=<%= project_config['cvsroot'] %>></td>
   </tr>
   <tr>
     <td>Protocol</td>
